Styling. Dark Mode toggle is functional. Fixed presigned url errors.

--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -13,6 +13,7 @@
         "footer footer";
     grid-template-rows: max-content max-content auto auto;
     grid-template-columns: 20% auto;
+    height: max-content;
  
 }
 
