--- a/frontend/src/style/Posts.css
+++ b/frontend/src/style/Posts.css
@@ -13,8 +13,26 @@ ul.topnav-content{
   
 }
 
+li{
+    display: flex;
+    
+    
+}
+
 .menulinks a{
-    margin: 5px 0;
+    align-self: center;
+    border-radius: 0.5rem;
+    padding: 0.1rem;
+    position: relative;
+    
+}
+
+.menulinks a:hover{
+    background-color: var(--nav-hover-color)
+}
+
+.menulinks a#m-icon:hover{
+    background-color: #fff;
 }
 
 img{
@@ -32,6 +50,9 @@ img{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 1rem;
+    background-color: var(--base-color-topnav);
+    color: var(--text-color-topnav);
 }
 
 .svglightdark{
@@ -40,6 +61,7 @@ img{
     height: 3rem;
     width: 3rem;
     visibility: visible;
+    fill: white;
 }
 
 .postcontent-container{
@@ -47,5 +69,12 @@ img{
     grid-template-columns: 1fr 1fr 1fr ;
     grid-template-rows: 1fr 1fr 1fr;
     height: 100%;
+    padding: 2rem;
+}
+
+.postitem{
+    width: 60%;
+    padding: 10px;
+    margin: auto;
 }
 
